--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -2,12 +2,9 @@
 layout: page
 ---
 
-{% if page.category_name %}
-  {% assign category_name = page.category_name %}
-{% endif %}
+{% if page.category_name %} {% assign category_name = page.category_name %} {%
+endif %}
 
 <div class="container mx-auto">
-  {% for post in site.categories[category_name] %}
-    {% include post_block.html %}
-  {% endfor %}
+  {% for post in site.posts %} {% include post_block.html %} {% endfor %}
 </div>
