--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,9 +22,9 @@
         </div>
 
         <div class="container mx-auto px-2 mb-2 clearfix header-text">
-          <h1 class="h0 inline-block col-9 sm-width-full py-4 mt-3 header-title">{{ site.title }}</h1>
+          <h1 class="animate h0 inline-block col-9 sm-width-full py-4 mt-3 header-title">{{ site.title }}</h1>
 
-          <div class="clearfix mb-4 py-1">
+          <div class="animate clearfix mb-4 py-1">
             <div class="col-4 sm-width-full left border-top-thin">
               <div class="table">
                 <div class="inline-block mt-3 mr-1">
@@ -38,7 +38,7 @@
                 </div>
               </div>
               <!-- Set site description in config.yml -->
-              <p class="h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
+              <p class="animate h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
             </div>
 
             <div class="col-4 sm-width-full left border-top-thin mt-3 mt-lg-0 ml-lg-4 table">
