--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,6 +52,11 @@ h4, .h4 { font-size: $h4-size; }
 h5, .h5 { font-size: $h5-size; }
 h6, .h6 { font-size: $h6-size; text-transform: uppercase; letter-spacing: 0.02em; }
 
+.subtitle {
+  color: #808080;
+  font-style: italic;
+}
+
 a {
   color: inherit;
   text-decoration: none;
