--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
   </header>
   <div class="col-4 sm-width-full border-top-thin">
   </div>
-  <div class="animate prose mb-4 py-4">
+  <div class="animate mb-4 py-4">
     {{ content }}
   </div>
 </article>
