--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
     </p>
   </div>
 
-  <div class="animate prose" itemprop="articleBody">{{ content }}</div>
+  <div class="animate prose flex" itemprop="articleBody">{{ content }}</div>
 </article>
 
 <div class="container mx-auto px-2 py-2 clearfix">
