--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -19,7 +19,7 @@ code {
 .prose {
 
   a {
-    text-decoration: underline dotted;
+    color: #0000EE;
 
     &:hover {
       text-decoration: underline;
@@ -28,7 +28,7 @@ code {
 
   p, ol, ul {
     font-size: $prose-font-size;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
     width: 100%;
 
     @media (min-width: $breakpoint-lg) {
@@ -50,19 +50,25 @@ code {
   }
 
   img {
-
     max-width: 100%;
+    margin: 0.5em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    @media (min-width: $breakpoint-lg) {
-      max-width: (12 / 10 * 100%); // make image fill width of container on desktop
-    }
-
+  img + em {
+    font-size: small;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4px;
   }
 
   blockquote {
     line-height: 1.375;
     padding-left: 20px;
-    margin: 40px 0 40px -16px;
+    margin: 10px 0 10px -16px;
     border-left: $spacer-1 solid $color-border;
     font-style: italic;
 
@@ -72,11 +78,11 @@ code {
 
     @media (min-width: $breakpoint-lg) {
       padding-left: $spacer-3;
-      margin: $spacer-4 0 $spacer-4 -40px;
+      margin: $spacer-2 0 $spacer-2 -16px;
       max-width: (11 / 10 * 100%);
 
       p {
-        font-size: 32px;
+        font-size: 24px;
       }
 
     }
@@ -136,4 +142,10 @@ code {
     }
   }
 
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
