finished rough draft

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -10,6 +10,17 @@
   }
 }
 
+.h0-title {
+  font-size: 64px;
+  line-height: 1.0125;
+  margin-top: 0.85em;
+  word-wrap: break-word;
+
+  @media (min-width: $breakpoint-lg) {
+    font-size: 128px;
+  }
+}
+
 .text-right { text-align: right; }
 
 .no-underline {
